# convaix

./: .gitignore  CLAUDE.md  DONE.md  README.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
examples/: chatgpt_example.json  claude_example.json  gemini_example.json
src/convaix/: __init__.py  chunking.py  cli.py  db.py  embeddings.py  schema.json  schema.py  search.py  validate.py
src/convaix/backends/: __init__.py  base.py  schema.py  schema.sql.template  sqlite.py
src/convaix/exchange/: __init__.py
src/convaix/providers/: __init__.py
tests/: test_chunking.py  test_cli.py  test_db.py  test_embeddings.py  test_examples.py  test_schema.py  test_schema_template.py  test_search.py  test_sqlite_store.py  test_validate.py
