[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "convaix"
version = "0.1.0"
description = "AI conversation exchange — store, search, share"
requires-python = ">=3.10"

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "sqlite-vec>=0.1.1",
]

[project.optional-dependencies]
embeddings = [
    "mlx-embedding-models>=0.1.0",
]
providers = [
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "requests>=2.31",
]
all = ["convaix[embeddings,providers]"]

[project.scripts]
convaix = "convaix.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
